kustomize/argocd/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: agro-cd
spec: {}
status: {}
